syntax = "proto3";
package runecraftstudios.pastello.web.game.v1;

import "runecraftstudios/pastello/game/types/v1/types.proto";
import "runecraftstudios/pastello/game/session/v1/session.proto";
import "runecraftstudios/pastello/game/trivia/v1/commands.proto";
import "runecraftstudios/pastello/game/trivia/v1/rules.proto";
import "runecraftstudios/pastello/game/puzzle/v1/commands.proto";
import "runecraftstudios/pastello/game/puzzle/v1/rules.proto";

option go_package = "github.com/runecraft-studios/pastello/internal/gen/runecraftstudios/pastello/web/game/v1;webgamev1";

// Generic error that the edge can show/log.
message ErrorEvent { string code = 1; string message = 2; }

// Start-session request (edge shape)
message StartGameSessionCommand {
  runecraftstudios.pastello.game.types.v1.GameType game_type = 1;
  repeated runecraftstudios.pastello.game.types.v1.PlayerId player_ids = 2;
  oneof config {
    runecraftstudios.pastello.game.trivia.v1.TriviaRules trivia = 10;
    runecraftstudios.pastello.game.puzzle.v1.PuzzleRules puzzle = 11;
    string ruleset_id = 12;
  }
}

message GameSessionStartedEvent {
  runecraftstudios.pastello.game.session.v1.GameSession session = 1;
}

// Single envelope that carries both commands and events.
message Envelope {
  string correlation_id = 100;

  oneof body {
    // Commands (client -> server)
    StartGameSessionCommand                                 start_game_session   = 1;
    runecraftstudios.pastello.game.trivia.v1.SubmitAnswerCommand trivia_submit_answer = 2;
    runecraftstudios.pastello.game.trivia.v1.RevealHintCommand  trivia_reveal_hint    = 3;
    runecraftstudios.pastello.game.puzzle.v1.MovePieceCommand   puzzle_move_piece     = 10;
    runecraftstudios.pastello.game.puzzle.v1.UndoMoveCommand    puzzle_undo_move      = 11;

    // Events (server -> client)
    GameSessionStartedEvent                                     game_session_started  = 101;
    runecraftstudios.pastello.game.trivia.v1.AnswerAcceptedEvent trivia_answer_accepted = 102;
    runecraftstudios.pastello.game.trivia.v1.HintRevealedEvent   trivia_hint_revealed   = 103;
    runecraftstudios.pastello.game.puzzle.v1.PieceMovedEvent     puzzle_piece_moved     = 110;
    runecraftstudios.pastello.game.puzzle.v1.MoveUndoneEvent     puzzle_move_undone     = 111;

    ErrorEvent error = 199;
  }
}
